--- a/learning-spring/pom.xml
+++ b/learning-spring/pom.xml
@@ -38,6 +38,13 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 
 	</dependencies>
 
