--- a/learning-spring/src/main/resources/application.properties
+++ b/learning-spring/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=system968
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+server.port=9090
