--- a/ReactJS-Spring-Boot-CRUD-Full-Stack-App-master/springboot-backend/src/main/resources/application.properties
+++ b/ReactJS-Spring-Boot-CRUD-Full-Stack-App-master/springboot-backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6642447
 
 
 
 server.port=9090
-spring.datasource.username=root
-spring.datasource.password=system968
+spring.datasource.username=sql6642447
+spring.datasource.password=pvdkXD2NfA
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
