--- a/ReactJS-Spring-Boot-CRUD-Full-Stack-App-master/springboot-backend/src/main/resources/application.properties
+++ b/ReactJS-Spring-Boot-CRUD-Full-Stack-App-master/springboot-backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
+
+#spring.security.user.name= TempUser
+#spring.security.user.password= TempUser
